--- a/input.css
+++ b/input.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    h1 {
+        @apply font-bold text-2xl md:text-3xl
+    }
+
+    h2 {
+        @apply font-bold text-lg md:text-2xl
+    }
+}
+
+@layer components {
+    .summary-item {
+        @apply p-4 flex justify-center items-center rounded-xl bg-gradient-to-r from-white/95 to-white/95 text-base md:text-lg
+    }
+
+    .summary-item-label {
+        @apply ml-3
+    }
+    .summary-item-score {
+        @apply ml-auto font-bold text-dark-gray-blue
+    }
+}
